--- a/index.html
+++ b/index.html
@@ -323,10 +323,56 @@
 
   <!-- Mobile Drawer Menu -->
   <aside id="mobileDrawer" class="mobile-drawer" role="dialog" aria-modal="true" aria-label="Mobile menu" aria-hidden="true">
-    <header>
-      <strong style="letter-spacing:.18em">W A Y A N I</strong>
-      <button id="closeMobile" class="icon-btn" aria-label="Close menu">✕</button>
-    </header>
+<header style="text-align:center;">
+  <a href="/" aria-label="WAYANI Home" style="display:inline-block;">
+    <!-- WAYANI SVG Logo Cleaned (Transparent Background) -->
+    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="200" height="60" zoomAndPan="magnify" viewBox="0 0 375 374.999991" preserveAspectRatio="xMidYMid meet" version="1.2">
+      <defs>
+        <clipPath id="09e40438ae">
+          <rect x="0" width="283" y="0" height="106"/>
+        </clipPath>
+      </defs>
+      <g id="823fff5113">
+        <g transform="matrix(1,0,0,1,82,134)">
+          <g clip-path="url(#09e40438ae)">
+            <g style="fill:#000000;fill-opacity:1;">
+              <g transform="translate(67.525531, 69.183809)">
+                <path style="stroke:none" d="M 28.71875 -0.0625 C 28.71875 -0.0195312 28.71875 0.0195312 28.71875 0.0625 C 28.675781 0.101562 28.65625 0.125 28.65625 0.125 C 28.65625 0.164062 28.65625 0.1875 28.65625 0.1875 C 28.65625 0.144531 28.65625 0.144531 28.65625 0.1875 C 28.613281 0.1875 28.59375 0.207031 28.59375 0.25 C 28.59375 0.25 28.570312 0.25 28.53125 0.25 C 28.488281 0.25 28.46875 0.25 28.46875 0.25 L 27.140625 0.25 C 27.015625 0.25 26.929688 0.1875 26.890625 0.0625 L 24.234375 -8.71875 C 21.710938 -8.414062 19.191406 -8.265625 16.671875 -8.265625 C 12.671875 -8.265625 8.710938 -8.625 4.796875 -9.34375 L 1.953125 0.0625 C 1.910156 0.1875 1.828125 0.25 1.703125 0.25 C 1.703125 0.25 1.679688 0.25 1.640625 0.25 C 1.472656 0.207031 1.410156 0.101562 1.453125 -0.0625 L 4.359375 -9.65625 C 4.359375 -9.695312 4.359375 -9.695312 4.359375 -9.65625 L 14.203125 -42.171875 L 14.828125 -44.25 L 14.828125 -44.3125 C 14.828125 -44.3125 14.828125 -44.332031 14.828125 -44.375 C 14.828125 -44.375 14.847656 -44.375 14.890625 -44.375 C 14.890625 -44.414062 14.890625 -44.4375 14.890625 -44.4375 C 14.890625 -44.4375 14.910156 -44.4375 14.953125 -44.4375 C 14.953125 -44.476562 14.953125 -44.5 14.953125 -44.5 C 15.003906 -44.5 15.03125 -44.5 15.03125 -44.5 C 15.070312 -44.5 15.09375 -44.5 15.09375 -44.5 C 15.132812 -44.5 15.15625 -44.5 15.15625 -44.5 C 15.15625 -44.5 15.175781 -44.5 15.21875 -44.5 C 15.21875 -44.5 15.21875 -44.476562 15.21875 -44.4375 C 15.257812 -44.4375 15.28125 -44.4375 15.28125 -44.4375 C 15.28125 -44.4375 15.28125 -44.414062 15.28125 -44.375 C 15.320312 -44.375 15.34375 -44.375 15.34375 -44.375 C 15.34375 -44.332031 15.34375 -44.3125 15.34375 -44.3125 Z M 16.671875 -8.84375 C 19.148438 -8.84375 21.628906 -8.96875 24.109375 -9.21875 L 14.453125 -41.15625 L 4.984375 -9.84375 C 8.816406 -9.175781 12.710938 -8.84375 16.671875 -8.84375 Z M 16.671875 -8.84375 "/>
+              </g>
+            </g>
+            <g style="fill:#000000;fill-opacity:1;">
+              <g transform="translate(0.739252, 72.438359)">
+                <path style="stroke:none" d="M 21.09375 0.625 L 2.0625 -62.3125 ... Z M 21.09375 0.625 "/>
+              </g>
+            </g>
+            <g style="fill:#000000;fill-opacity:1;">
+              <g transform="translate(91.786184, 72.438359)">
+                <path style="stroke:none" d="M 19.578125 0 L 19.578125 -21.8125 ... Z M 19.578125 0 "/>
+              </g>
+            </g>
+            <g style="fill:#000000;fill-opacity:1;">
+              <g transform="translate(208.987066, 69.183809)">
+                <path style="stroke:none" d="M 6.5625 0.25 C 6.476562 0.25 ... Z M 6.5625 0.25 "/>
+              </g>
+            </g>
+            <g style="fill:#000000;fill-opacity:1;">
+              <g transform="translate(157.696298, 72.438359)">
+                <path style="stroke:none" d="M 7.1875 -62.390625 ... Z M 7.1875 -62.390625 "/>
+              </g>
+            </g>
+            <g style="fill:#000000;fill-opacity:1;">
+              <g transform="translate(128.309922, 69.183809)">
+                <path style="stroke:none" d="M 28.71875 -0.0625 ... Z M 16.671875 -8.84375 "/>
+              </g>
+            </g>
+          </g>
+        </g>
+      </g>
+    </svg>
+  </a>
+
+  <button id="closeMobile" class="icon-btn" aria-label="Close menu">✕</button>
+</header>
     <nav>
       <div class="mobile-group">
         <button aria-expanded="false">Chapter 1 : Heritage — Season I</button>
