--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     .results .title { font-size:14px; font-weight:400; letter-spacing:.03em; }
     .results .desc { font-size:12px; color:#666; }
     .item.flash { outline:2px solid #C9A23F; outline-offset:2px; transition: outline .2s; }
-	  
+
 	  /* === FOOTER WIDTH OVERRIDE (place LAST in <style>) === */
 .site-footer { padding: 72px 0; } /* taller & no side padding on the wrapper */
 
@@ -261,33 +261,6 @@
 /* optional: breathe the columns a bit on wide screens */
 @media (min-width: 1280px) {
   .footer-grid { column-gap: 48px; }
-}
-  /* Brand logo sizing */
-  .brand svg {
-    height: 28px;
-    width: auto;
-  }
-
-  @media (max-width: 900px) {
-    .brand svg {
-      height: 22px;
-    }
-  }
-/* Logo sizing + visibility */
-.brand svg{
-  height: 42px;      /* was 28px — make it more visible */
-  width: auto;
-  display: block;
-  margin: 0 auto;
-  shape-rendering: geometricPrecision;
-  text-rendering: optimizeLegibility;
-}
-.brand svg path{
-  fill:#111 !important;  /* ensure solid, dark fill */
-}
-
-@media (max-width: 900px){
-  .brand svg{ height: 28px; }
 }
   </style>
 </head>
@@ -328,57 +301,7 @@
         </div>
       </div>
 
-      <div class="brand">
-  <span aria-label="WAYANI Home" style="display:inline-block; line-height:0;">
-    <!-- WAYANI SVG Logo (transparent background) -->
-    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-         width="200" height="60" zoomAndPan="magnify" viewBox="0 0 375 374.999991"
-         preserveAspectRatio="xMidYMid meet" version="1.2">
-      <defs>
-        <clipPath id="09e40438ae">
-          <rect x="0" width="283" y="0" height="106"/>
-        </clipPath>
-      </defs>
-      <g id="823fff5113">
-        <!-- removed background rects so SVG is transparent -->
-        <g transform="matrix(1,0,0,1,82,134)">
-          <g clip-path="url(#09e40438ae)">
-            <g style="fill:#000000;fill-opacity:1;">
-              <g transform="translate(67.525531, 69.183809)">
-                <path style="stroke:none" d="M 28.71875 -0.0625 C 28.71875 -0.0195312 28.71875 0.0195312 28.71875 0.0625 C 28.675781 0.101562 28.65625 0.125 28.65625 0.125 C 28.65625 0.164062 28.65625 0.1875 28.65625 0.1875 C 28.65625 0.144531 28.65625 0.144531 28.65625 0.1875 C 28.613281 0.1875 28.59375 0.207031 28.59375 0.25 C 28.59375 0.25 28.570312 0.25 28.53125 0.25 C 28.488281 0.25 28.46875 0.25 28.46875 0.25 L 27.140625 0.25 C 27.015625 0.25 26.929688 0.1875 26.890625 0.0625 L 24.234375 -8.71875 C 21.710938 -8.414062 19.191406 -8.265625 16.671875 -8.265625 C 12.671875 -8.265625 8.710938 -8.625 4.796875 -9.34375 L 1.953125 0.0625 C 1.910156 0.1875 1.828125 0.25 1.703125 0.25 C 1.703125 0.25 1.679688 0.25 1.640625 0.25 C 1.472656 0.207031 1.410156 0.101562 1.453125 -0.0625 L 4.359375 -9.65625 C 4.359375 -9.695312 4.359375 -9.695312 4.359375 -9.65625 L 14.203125 -42.171875 L 14.828125 -44.25 L 14.828125 -44.3125 C 14.828125 -44.3125 14.828125 -44.332031 14.828125 -44.375 C 14.828125 -44.375 14.847656 -44.375 14.890625 -44.375 C 14.890625 -44.414062 14.890625 -44.4375 14.890625 -44.4375 C 14.890625 -44.4375 14.910156 -44.4375 14.953125 -44.4375 C 14.953125 -44.476562 14.953125 -44.5 14.953125 -44.5 C 15.003906 -44.5 15.03125 -44.5 15.03125 -44.5 C 15.070312 -44.5 15.09375 -44.5 15.09375 -44.5 C 15.132812 -44.5 15.15625 -44.5 15.15625 -44.5 C 15.15625 -44.5 15.175781 -44.5 15.21875 -44.5 C 15.21875 -44.5 15.21875 -44.476562 15.21875 -44.4375 C 15.257812 -44.4375 15.28125 -44.4375 15.28125 -44.4375 C 15.28125 -44.4375 15.28125 -44.414062 15.28125 -44.375 C 15.320312 -44.375 15.34375 -44.375 15.34375 -44.375 C 15.34375 -44.332031 15.34375 -44.3125 15.34375 -44.3125 Z M 16.671875 -8.84375 C 19.148438 -8.84375 21.628906 -8.96875 24.109375 -9.21875 L 14.453125 -41.15625 L 4.984375 -9.84375 C 8.816406 -9.175781 12.710938 -8.84375 16.671875 -8.84375 Z M 16.671875 -8.84375 "/>
-              </g>
-            </g>
-            <g style="fill:#000000;fill-opacity:1;">
-              <g transform="translate(0.739252, 72.438359)">
-                <path style="stroke:none" d="M 21.09375 0.625 L 2.0625 -62.3125 C 2.0625 -62.363281 2.0625 -62.421875 2.0625 -62.484375 C 2.0625 -62.546875 2.09375 -62.609375 2.15625 -62.671875 C 2.09375 -62.609375 2.09375 -62.609375 2.15625 -62.671875 C 2.21875 -62.722656 2.25 -62.75 2.25 -62.75 C 2.25 -62.75 2.273438 -62.75 2.328125 -62.75 C 2.328125 -62.8125 2.359375 -62.84375 2.421875 -62.84375 L 4.3125 -62.84375 C 4.488281 -62.84375 4.609375 -62.753906 4.671875 -62.578125 L 22.359375 -3.859375 L 34.921875 -45.34375 L 29.71875 -62.3125 C 29.71875 -62.363281 29.71875 -62.421875 29.71875 -62.484375 C 29.71875 -62.484375 29.75 -62.484375 29.8125 -62.484375 C 29.8125 -62.546875 29.8125 -62.609375 29.8125 -62.671875 C 29.863281 -62.722656 29.890625 -62.75 29.890625 -62.75 C 29.953125 -62.75 29.984375 -62.75 29.984375 -62.75 C 30.046875 -62.75 30.078125 -62.75 30.078125 -62.75 C 30.078125 -62.8125 30.109375 -62.84375 30.171875 -62.84375 L 31.96875 -62.84375 C 32.144531 -62.84375 32.265625 -62.753906 32.328125 -62.578125 L 50.015625 -3.859375 L 67.78125 -62.578125 C 67.84375 -62.816406 67.992188 -62.875 68.234375 -62.75 C 68.472656 -62.695312 68.5625 -62.550781 68.5 -62.3125 L 50.453125 -2.421875 L 49.5625 0.453125 L 49.46875 0.625 C 49.46875 0.6875 49.4375 0.75 49.375 0.8125 C 49.375 0.8125 49.347656 0.8125 49.296875 0.8125 C 49.296875 0.863281 49.265625 0.890625 49.203125 0.890625 C 49.203125 0.890625 49.171875 0.890625 49.109375 0.890625 C 49.109375 0.890625 49.078125 0.890625 49.015625 0.890625 C 48.960938 0.890625 48.9375 0.863281 48.9375 0.8125 C 48.875 0.8125 48.875 0.8125 48.9375 0.8125 C 48.875 0.75 48.8125 0.6875 48.75 0.625 L 35.28125 -44 L 22.71875 -2.421875 L 22.359375 -1.078125 L 21.8125 0.625 C 21.8125 0.5625 21.8125 0.5625 21.8125 0.625 C 21.757812 0.6875 21.734375 0.75 21.734375 0.8125 C 21.734375 0.8125 21.703125 0.8125 21.640625 0.8125 C 21.640625 0.863281 21.609375 0.890625 21.546875 0.890625 C 21.546875 0.890625 21.515625 0.890625 21.453125 0.890625 C 21.398438 0.890625 21.398438 0.890625 21.453125 0.890625 C 21.398438 0.890625 21.375 0.890625 21.375 0.890625 C 21.3125 0.890625 21.28125 0.863281 21.28125 0.8125 C 21.21875 0.8125 21.1875 0.8125 21.1875 0.8125 C 21.125 0.75 21.09375 0.6875 21.09375 0.625 Z M 21.09375 0.625 "/>
-              </g>
-            </g>
-            <g style="fill:#000000;fill-opacity:1;">
-              <g transform="translate(91.786184, 72.438359)">
-                <path style="stroke:none" d="M 19.578125 0 L 19.578125 -21.8125 L 1.4375 -62.3125 C 1.4375 -62.363281 1.4375 -62.421875 1.4375 -62.484375 C 1.4375 -62.546875 1.46875 -62.578125 1.53125 -62.578125 C 1.53125 -62.640625 1.53125 -62.671875 1.53125 -62.671875 C 1.53125 -62.671875 1.554688 -62.695312 1.609375 -62.75 C 1.671875 -62.75 1.671875 -62.75 1.609375 -62.75 C 1.671875 -62.8125 1.734375 -62.84375 1.796875 -62.84375 L 3.765625 -62.84375 C 3.953125 -62.84375 4.070312 -62.753906 4.125 -62.578125 L 21.8125 -22.984375 L 39.5 -62.578125 C 39.625 -62.816406 39.773438 -62.875 39.953125 -62.75 C 40.191406 -62.695312 40.28125 -62.550781 40.21875 -62.3125 L 22.09375 -21.8125 L 22.09375 0 C 22.09375 0.238281 21.972656 0.359375 21.734375 0.359375 L 19.9375 0.359375 C 19.695312 0.359375 19.578125 0.238281 19.578125 0 Z M 19.578125 0 "/>
-              </g>
-            </g>
-            <g style="fill:#000000;fill-opacity:1;">
-              <g transform="translate(208.987066, 69.183809)">
-                <path style="stroke:none" d="M 6.5625 0.25 C 6.476562 0.25 6.203125 0.25 5.734375 0.25 C 5.273438 0.25 5.046875 0.25 5.046875 0.25 L 5.046875 -44.1875 C 5.046875 -44.1875 5.066406 -44.1875 5.109375 -44.1875 C 5.148438 -44.1875 5.210938 -44.1875 5.296875 -44.1875 C 5.378906 -44.1875 5.648438 -44.1875 6.109375 -44.1875 C 6.578125 -44.1875 6.8125 -44.1875 6.8125 -44.1875 L 6.8125 0.25 C 6.8125 0.25 6.789062 0.25 6.75 0.25 C 6.707031 0.25 6.644531 0.25 6.5625 0.25 Z M 6.5625 0.25 "/>
-              </g>
-            </g>
-            <g style="fill:#000000;fill-opacity:1;">
-              <g transform="translate(157.696298, 72.438359)">
-                <path style="stroke:none" d="M 7.1875 -62.390625 C 7.1875 -62.453125 7.1875 -62.484375 7.1875 -62.484375 C 7.1875 -62.546875 7.1875 -62.578125 7.1875 -62.578125 C 7.1875 -62.578125 7.210938 -62.609375 7.265625 -62.671875 C 7.210938 -62.609375 7.210938 -62.609375 7.265625 -62.671875 C 7.265625 -62.671875 7.296875 -62.695312 7.359375 -62.75 C 7.421875 -62.8125 7.484375 -62.84375 7.546875 -62.84375 L 9.609375 -62.84375 C 9.722656 -62.84375 9.84375 -62.753906 9.96875 -62.578125 L 44.078125 -3.328125 L 44.078125 -62.390625 C 44.078125 -62.691406 44.195312 -62.84375 44.4375 -62.84375 C 44.738281 -62.84375 44.890625 -62.691406 44.890625 -62.390625 L 44.890625 0 C 44.890625 0.0625 44.859375 0.117188 44.796875 0.171875 C 44.742188 0.296875 44.625 0.359375 44.4375 0.359375 L 43.546875 0.359375 C 43.421875 0.359375 43.300781 0.296875 43.1875 0.171875 L 7.984375 -60.96875 L 7.984375 0 C 7.984375 0.238281 7.835938 0.359375 7.546875 0.359375 C 7.304688 0.359375 7.1875 0.238281 7.1875 0 Z M 7.1875 -62.390625 "/>
-              </g>
-            </g>
-            <g style="fill:#000000;fill-opacity:1;">
-              <g transform="translate(128.309922, 69.183809)">
-                <path style="stroke:none" d="M 28.71875 -0.0625 C 28.71875 -0.0195312 28.71875 0.0195312 28.71875 0.0625 C 28.675781 0.101562 28.65625 0.125 28.65625 0.125 C 28.65625 0.164062 28.65625 0.1875 28.65625 0.1875 C 28.65625 0.144531 28.65625 0.144531 28.65625 0.1875 C 28.613281 0.1875 28.59375 0.207031 28.59375 0.25 C 28.59375 0.25 28.570312 0.25 28.53125 0.25 C 28.488281 0.25 28.46875 0.25 28.46875 0.25 L 27.140625 0.25 C 27.015625 0.25 26.929688 0.1875 26.890625 0.0625 L 24.234375 -8.71875 C 21.710938 -8.414062 19.191406 -8.265625 16.671875 -8.265625 C 12.671875 -8.265625 8.710938 -8.625 4.796875 -9.34375 L 1.953125 0.0625 C 1.910156 0.1875 1.828125 0.25 1.703125 0.25 C 1.703125 0.25 1.679688 0.25 1.640625 0.25 C 1.472656 0.207031 1.410156 0.101562 1.453125 -0.0625 L 4.359375 -9.65625 C 4.359375 -9.695312 4.359375 -9.695312 4.359375 -9.65625 L 14.203125 -42.171875 L 14.828125 -44.25 L 14.828125 -44.3125 C 14.828125 -44.3125 14.828125 -44.332031 14.828125 -44.375 C 14.828125 -44.375 14.847656 -44.375 14.890625 -44.375 C 14.890625 -44.414062 14.890625 -44.4375 14.890625 -44.4375 C 14.890625 -44.4375 14.910156 -44.4375 14.953125 -44.4375 C 14.953125 -44.476562 14.953125 -44.5 14.953125 -44.5 C 15.003906 -44.5 15.03125 -44.5 15.03125 -44.5 C 15.070312 -44.5 15.09375 -44.5 15.09375 -44.5 C 15.132812 -44.5 15.15625 -44.5 15.15625 -44.5 C 15.15625 -44.5 15.175781 -44.5 15.21875 -44.5 C 15.21875 -44.5 15.21875 -44.476562 15.21875 -44.4375 C 15.257812 -44.4375 15.28125 -44.4375 15.28125 -44.4375 C 15.28125 -44.4375 15.28125 -44.414062 15.28125 -44.375 C 15.320312 -44.375 15.34375 -44.375 15.34375 -44.375 C 15.34375 -44.332031 15.34375 -44.3125 15.34375 -44.3125 Z M 16.671875 -8.84375 C 19.148438 -8.84375 21.628906 -8.96875 24.109375 -9.21875 L 14.453125 -41.15625 L 4.984375 -9.84375 C 8.816406 -9.175781 12.710938 -8.84375 16.671875 -8.84375 Z M 16.671875 -8.84375 "/>
-              </g>
-            </g>
-          </g>
-        </g>
-      </g>
-    </svg>
-  </span>
-</div>
+      <div class="brand"><a href="#" aria-label="WAYANI Home">W A Y A̲ N I</a></div>
 
       <div class="nav-right">
         <div class="menu">
@@ -400,57 +323,11 @@
 
   <!-- Mobile Drawer Menu -->
   <aside id="mobileDrawer" class="mobile-drawer" role="dialog" aria-modal="true" aria-label="Mobile menu" aria-hidden="true">
-<header style="text-align:center;">
-  <a href="/" aria-label="WAYANI Home" style="display:inline-block;">
-    <!-- WAYANI SVG Logo Cleaned (Transparent Background) -->
-    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="200" height="60" zoomAndPan="magnify" viewBox="0 0 375 374.999991" preserveAspectRatio="xMidYMid meet" version="1.2">
-      <defs>
-        <clipPath id="09e40438ae">
-          <rect x="0" width="283" y="0" height="106"/>
-        </clipPath>
-      </defs>
-      <g id="823fff5113">
-        <g transform="matrix(1,0,0,1,82,134)">
-          <g clip-path="url(#09e40438ae)">
-            <g style="fill:#000000;fill-opacity:1;">
-              <g transform="translate(67.525531, 69.183809)">
-                <path style="stroke:none" d="M 28.71875 -0.0625 C 28.71875 -0.0195312 28.71875 0.0195312 28.71875 0.0625 C 28.675781 0.101562 28.65625 0.125 28.65625 0.125 C 28.65625 0.164062 28.65625 0.1875 28.65625 0.1875 C 28.65625 0.144531 28.65625 0.144531 28.65625 0.1875 C 28.613281 0.1875 28.59375 0.207031 28.59375 0.25 C 28.59375 0.25 28.570312 0.25 28.53125 0.25 C 28.488281 0.25 28.46875 0.25 28.46875 0.25 L 27.140625 0.25 C 27.015625 0.25 26.929688 0.1875 26.890625 0.0625 L 24.234375 -8.71875 C 21.710938 -8.414062 19.191406 -8.265625 16.671875 -8.265625 C 12.671875 -8.265625 8.710938 -8.625 4.796875 -9.34375 L 1.953125 0.0625 C 1.910156 0.1875 1.828125 0.25 1.703125 0.25 C 1.703125 0.25 1.679688 0.25 1.640625 0.25 C 1.472656 0.207031 1.410156 0.101562 1.453125 -0.0625 L 4.359375 -9.65625 C 4.359375 -9.695312 4.359375 -9.695312 4.359375 -9.65625 L 14.203125 -42.171875 L 14.828125 -44.25 L 14.828125 -44.3125 C 14.828125 -44.3125 14.828125 -44.332031 14.828125 -44.375 C 14.828125 -44.375 14.847656 -44.375 14.890625 -44.375 C 14.890625 -44.414062 14.890625 -44.4375 14.890625 -44.4375 C 14.890625 -44.4375 14.910156 -44.4375 14.953125 -44.4375 C 14.953125 -44.476562 14.953125 -44.5 14.953125 -44.5 C 15.003906 -44.5 15.03125 -44.5 15.03125 -44.5 C 15.070312 -44.5 15.09375 -44.5 15.09375 -44.5 C 15.132812 -44.5 15.15625 -44.5 15.15625 -44.5 C 15.15625 -44.5 15.175781 -44.5 15.21875 -44.5 C 15.21875 -44.5 15.21875 -44.476562 15.21875 -44.4375 C 15.257812 -44.4375 15.28125 -44.4375 15.28125 -44.4375 C 15.28125 -44.4375 15.28125 -44.414062 15.28125 -44.375 C 15.320312 -44.375 15.34375 -44.375 15.34375 -44.375 C 15.34375 -44.332031 15.34375 -44.3125 15.34375 -44.3125 Z M 16.671875 -8.84375 C 19.148438 -8.84375 21.628906 -8.96875 24.109375 -9.21875 L 14.453125 -41.15625 L 4.984375 -9.84375 C 8.816406 -9.175781 12.710938 -8.84375 16.671875 -8.84375 Z M 16.671875 -8.84375 "/>
-              </g>
-            </g>
-            <g style="fill:#000000;fill-opacity:1;">
-              <g transform="translate(0.739252, 72.438359)">
-                <path style="stroke:none" d="M 21.09375 0.625 L 2.0625 -62.3125 ... Z M 21.09375 0.625 "/>
-              </g>
-            </g>
-            <g style="fill:#000000;fill-opacity:1;">
-              <g transform="translate(91.786184, 72.438359)">
-                <path style="stroke:none" d="M 19.578125 0 L 19.578125 -21.8125 ... Z M 19.578125 0 "/>
-              </g>
-            </g>
-            <g style="fill:#000000;fill-opacity:1;">
-              <g transform="translate(208.987066, 69.183809)">
-                <path style="stroke:none" d="M 6.5625 0.25 C 6.476562 0.25 ... Z M 6.5625 0.25 "/>
-              </g>
-            </g>
-            <g style="fill:#000000;fill-opacity:1;">
-              <g transform="translate(157.696298, 72.438359)">
-                <path style="stroke:none" d="M 7.1875 -62.390625 ... Z M 7.1875 -62.390625 "/>
-              </g>
-            </g>
-            <g style="fill:#000000;fill-opacity:1;">
-              <g transform="translate(128.309922, 69.183809)">
-                <path style="stroke:none" d="M 28.71875 -0.0625 ... Z M 16.671875 -8.84375 "/>
-              </g>
-            </g>
-          </g>
-        </g>
-      </g>
-    </svg>
-  </a>
-
-  <button id="closeMobile" class="icon-btn" aria-label="Close menu">✕</button>
-</header>
-    <nav>
+    <header>
+      <strong style="letter-spacing:.18em">W A Y A N I</strong>
+      <button id="closeMobile" class="icon-btn" aria-label="Close menu">✕</button>
+    </header>
+<nav>
       <div class="mobile-group">
         <button aria-expanded="false">Chapter 1 : Heritage — Season I</button>
         <div class="mobile-sub" hidden>
@@ -504,7 +381,7 @@
 
     <div class="item">
       <img src="https://via.placeholder.com/400x320/E6D2B5/333333?text=Sahara+%7C+Beige" alt="Sahara Hijab" />
-      <h2>Moroccan Sahara (Beige)</h2>
+      <h2>Sahara (Beige)</h2>
       <p>The Desert’s Eternal Light. Calm, grounding, endlessly versatile.</p>
     </div>
 
@@ -787,7 +664,7 @@
     <div class="footer-grid">
       <!-- Newsletter -->
       <div class="newsletter">
-        <h4>Join our W A Y A N I whispers</h4>
+        <h4>W A Y A N I - Whispers</h4>
 		<h4>Timeless Drops, First To You.</h4>
         <form action="https://formspree.io/f/xdkdrzno" method="POST" aria-label="Newsletter signup">
           <input type="email" name="email" placeholder="Email" required>
@@ -814,7 +691,7 @@
 
       <!-- The House of WAYANI -->
       <div class="footer-col">
-        <h4>The House of W A Y A N I</h4>
+        <h4>The House of</h4>
         <a href="#">Sustainability</a>
         <a href="#">Ethics & Compliance</a>
         <a href="#">Careers</a>
