--- a/index.html
+++ b/index.html
@@ -97,32 +97,36 @@
     .dropdown a:hover { background: #f6f2ea; }
     .menu:hover .dropdown, .menu:focus-within .dropdown { display: block; }
 
-/* Hero (full-bleed image) */
-header.hero{
+/* Hero (full-bleed image with vertical stacked text) */
+header.hero {
   position: relative;
   min-height: min(92vh, 860px);
   display: flex;
+  flex-direction: column;   /* stack items vertically */
   align-items: center;
   justify-content: center;
   text-align: center;
   color: #fff;
   padding: 80px 20px;
 
-  /* ✅ make sure this filename/path exists */
-  background: url('hero.webp') center/cover no-repeat;
+  background: url('haute-hijab-plaza-0005.webp') center/cover no-repeat;
 }
 
-header.hero::before{
-  content:"";
-  position:absolute; inset:0;
-  background: rgba(0,0,0,.25); /* lighter so it won’t look like a grey slab */
+header.hero::before {
+  content: "";
+  position: absolute; inset: 0;
+  background: rgba(0,0,0,.25);
 }
 
-header.hero > *{ position: relative; z-index: 1; }
-.kicker{ color:rgba(255,255,255,.85); }
-.subtitle,.subtle-note{ color:rgba(255,255,255,.8); }
-.tagline{ color:#fff; }
-
+header.hero > * {
+  position: relative;
+  z-index: 1;
+  max-width: 800px; /* keep text from stretching too wide */
+}
+.kicker { color: rgba(255,255,255,.85); }
+.subtitle, .subtle-note { color: rgba(255,255,255,.8); }
+.tagline { color: #fff; }
+    
     /* Collection Grid */
     .collection { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 40px; padding: 40px 50px 10px; max-width: 1200px; margin: 0 auto; }
     .item { background: var(--card); border-radius: 20px; overflow: hidden; box-shadow: 0 6px 18px var(--shadow); transition: transform .3s ease, box-shadow .3s ease; }
